# bouzecode

./: .gitignore  LICENSE  README.md  bouzecode.ps1  bouzecode.py  bouzecode_publish.ps1  bouzecode_self_update.ps1  bouzecode_self_update_detached.ps1  bouzegui.ps1  cloudsave.py  compaction.py  config.py  conftest.py  context.py  context_gc.py  demo.py  followup_compaction.py  logo.txt  memory.py  pyproject.toml  repl.py  repl_sentinels.py  setup_tools.py  skills.py  subagent.py  system_prompt_template.txt  tool_registry.py
agent/: README.md  __init__.py  dag.py  loop.py  permissions.py  state.py
checkpoint/: hooks.py  store.py  types.py
commands/: __init__.py  _personas.py  basic.py  brainstorm.py  checkpoint_cmd.py  cloudsave_cmd.py  diagnostics.py  dispatcher.py  image_cmd.py  info.py  memory_cmd.py  misc.py  plan_cmd.py  plugin_cmd.py  proactive.py  readline_setup.py  session.py  session_load.py  settings.py  skills_mcp.py  ssj.py  tasks_cmd.py  telegram_cmd.py  video_cmd.py  video_wizard.py  voice_cmd.py  worker.py
demos/: make_brainstorm_demo.py  make_demo.py  make_proactive_demo.py  make_ssj_demo.py  make_telegram_demo.py
docs/: INTEGRATION.md  MIGRATION.md  MIGRATION_TESTS.md  MR_DESCRIPTIONS.md  README.CN.MD  README.DE.MD  README.ES.MD  README.FR.MD  README.JP.MD  README.KO.MD  README.PT.MD  architecture.md  comparison_claude_code_vs_nano_v3.03_cn.md  comparison_claude_code_vs_nano_v3.03_en.md  contributor_guide.md  index.html  news.md  readme.md  update_readme_v3.0.md
folder_desc/: analyzer.py  desc_utils.py  tools.py
html_renderer/: __init__.py  demo.html  demo.py  json_parser.py  parser.py  renderer.py
mcp/: README.md  __init__.py  client.py  config.py  http_transport.py  manager.py  mcp_client.py  stdio_transport.py  tools.py  types.py
memory/: __init__.py  consolidator.py  context.py  scan.py  store.py  tools.py  types.py
multi_agent/: definitions.py  manager.py  subagent.py  task.py  tools.py
paste_input/: __init__.py  segments.py  unix.py  win_console.py  windows.py
plugin/: __init__.py  loader.py  recommend.py  store.py  types.py
providers/: README.md  __init__.py  conversion.py  registry.py  types.py
skill/: __init__.py  builtin.py  executor.py  loader.py  tools.py
task/: store.py  tools.py  types.py
tests/: __init__.py  cache_conversation_helpers.py  conftest.py  e2e_checkpoint.py  e2e_commands.py  e2e_compact.py  e2e_harness.py  e2e_plan_mode.py  e2e_plan_tools.py  fake_llm.py  fake_mcp_server.py  mock_anthropic_server.py  test_checkpoint.py  test_compaction.py  test_context_gc.py  test_diff_view.py  test_e2e_folder_desc.py  test_e2e_html_renderer.py  test_followup_compaction.py  test_html_renderer.py  test_live_overflow.py  test_mcp.py  test_mcp_e2e.py  test_memory.py  test_mods.py  test_paste_input.py  test_plugin.py  test_retry.py  (+20 more)
(+520 files in other folders)
