[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bouzecode"
version = "1.1.1"
description = "Bouzecode: A Fast, Hackable Python AI Coding Assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "markdown>=3.10.2",
    "flask>=3.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
voice  = ["sounddevice"]
vision = ["Pillow"]
test   = ["pytest", "pytest-xdist", "pytest-playwright"]

[project.scripts]
bouzecode = "bouzecode:main"
bouzegui = "web.app:main"

[tool.setuptools]
py-modules = [
    "bouzecode",
    "cloudsave",
    "compaction",
    "config",
    "context",
    "context_gc",
    "followup_compaction",
    "memory",
    "repl",
    "repl_sentinels",
    "setup_tools",
    "skills",
    "subagent",
    "tool_registry",
]
packages = [
    "agent",
    "checkpoint",
    "commands",
    "folder_desc",
    "mcp",
    "memory",
    "multi_agent",
    "paste_input",
    "plugin",
    "providers",
    "providers.backends",
    "skill",
    "task",
    "tools",
    "tools.ops",
    "ui",
    "voice",
    "web",
    "html_renderer",
    "xml_tool_protocol",
]
